# go-word

./: .gitignore  Cargo.toml  README.md  do_write.py  tmp_write.py
.claude/skills/debug/: SKILL.md
crates/charts/: Cargo.toml
crates/charts/src/: commands.rs  drawingml_parser.rs  drawingml_writer.rs  editor.rs  error.rs  layout.rs  lib.rs  model.rs  render.rs  styles.rs  wizard.rs
crates/collab/: Cargo.toml
crates/collab/src/: bridge.rs  clock.rs  conflict.rs  crdt_tree.rs  error.rs  lib.rs  lww_register.rs  offline.rs  op_id.rs  operation.rs  permissions.rs  presence.rs  rga.rs  sync.rs  version.rs
crates/collab/src/server/: client.rs  connection.rs  file_store.rs  memory_store.rs  message.rs  mod.rs  router.rs  session.rs  storage.rs
crates/collab/tests/: collaboration_tests.rs
crates/doc_model/: Cargo.toml
crates/doc_model/src/: bookmark.rs  caption.rs  comment.rs  content_control.rs  crossref.rs  document.rs  error.rs  field.rs  footnote.rs  hyperlink.rs  image.rs  lib.rs  list.rs  node.rs  node_id.rs  pagination.rs  paragraph.rs  protection.rs  run.rs  section.rs  selection.rs  shape.rs  style.rs  table.rs  textbox.rs  tree.rs
crates/edit_engine/: Cargo.toml
crates/edit_engine/src/: bookmark_commands.rs  command.rs  comment_commands.rs  error.rs  executor.rs  field_commands.rs  find_replace.rs  footnote_commands.rs  hyperlink_commands.rs  image_commands.rs  lib.rs  list_commands.rs  navigation.rs  paragraph_commands.rs  section_commands.rs  shape_commands.rs  spellcheck_commands.rs  table_commands.rs  textbox_commands.rs  undo.rs
crates/layout_engine/: Cargo.toml
crates/layout_engine/src/: bidi.rs  cache.rs  error.rs  footnote_layout.rs  layout_tree.rs  lib.rs  line_breaker.rs  line_numbers.rs  paginator.rs  table_layout.rs  view_mode.rs
crates/mail_merge/: Cargo.toml
crates/mail_merge/src/: csv_parser.rs  data_source.rs  error.rs  json_parser.rs  lib.rs  merge_engine.rs  merge_field.rs  xlsx_parser.rs
crates/math/: Cargo.toml
crates/math/src/: commands.rs  editor.rs  error.rs  gallery.rs  layout.rs  lib.rs  linear.rs  model.rs  omml_parser.rs  omml_writer.rs  render.rs
crates/perf/: Cargo.toml
crates/perf/src/: budget.rs  lib.rs  metrics.rs  timing.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  error.rs  host.rs  installation.rs  lib.rs  manifest.rs  messages.rs  permissions.rs  registry.rs  sandbox.rs
crates/render_model/: Cargo.toml
crates/render_model/src/: caret.rs  converter.rs  error.rs  lib.rs  render_item.rs  selection.rs  squiggly.rs  viewport.rs
crates/revisions/: Cargo.toml
crates/revisions/src/: commands.rs  error.rs  lib.rs  revision.rs  state.rs
crates/store/: Cargo.toml
crates/store/src/: autosave.rs  chunked.rs  error.rs  file_io.rs  format.rs  image_store.rs  integrity.rs  lazy.rs  lib.rs  recovery.rs  serializer.rs  settings.rs  versions.rs
crates/store/src/docx/: api.rs  comments_io.rs  content_controls.rs  content_controls_writer.rs  content_types.rs  document.rs  document_writer.rs  drawings_io.rs  error.rs  fidelity.rs  fields_io.rs  footnotes_io.rs  hyperlinks.rs  images.rs  lists.rs  media_writer.rs  mod.rs  numbering_writer.rs  parser.rs  reader.rs  relationships.rs  styles.rs  styles_writer.rs  tables.rs  tables_io.rs  tables_writer.rs  track_changes.rs  writer.rs
crates/store/src/odt/: api.rs  error.rs  mod.rs  reader.rs
crates/store/src/pdf/: api.rs  content.rs  document.rs  fonts.rs  images.rs  mod.rs  objects.rs  options.rs  pdfa.rs  renderer.rs  tests.rs  writer.rs
crates/store/src/rtf/: api.rs  error.rs  mod.rs  parser.rs  writer.rs
crates/store/src/templates/: error.rs  manager.rs  metadata.rs  mod.rs  package.rs  style_pack.rs  tests.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: client.rs  crash.rs  error.rs  event.rs  inspector.rs  lib.rs  memory.rs  metrics.rs  privacy.rs  profiler.rs  report.rs  session.rs  transport.rs
crates/text_engine/: Cargo.toml
crates/text_engine/src/: discovery.rs  error.rs  fallback.rs  font.rs  font_manager.rs  lib.rs  metrics.rs  shaper.rs  spellcheck.rs
docs/: README.md
docs/implementation/: Gaps-Identified-Gemini.md  Phase-Four-Implementation-Plan.md  Phase-One-Implementation-Plan.md  Phase-Three-Implementation-Plan.md  Phase-Two-Implementation-Plan.md  Phase-Zero-Implementation-Plan.md  Phased-Implementation-Plan.md  SESSION-NOTES.md
docs/prd/: PRD-Expanded.md  PRD.md
docs/tdd/: Binary-Format-Extensions.md  Binary-Format-Spec.md  DOCX-Diff-Rules.md  DOCX-Mapping-Appendix.md  DOCX-Mapping.md  DOCX-Roundtrip.md  Internal-Format.md  Layout-Algorithm.md  Layout-Test-Plan.md  Selection-IME.md  Selection-Transform-Math.md  TDD-Overview.md
docs/tdd/accessibility/: Accessibility-Spec.md
docs/tdd/api/: IPC-API-Spec.md
docs/tdd/assets/: Image-Asset-Pipeline.md
docs/tdd/charts/: Charts-Spec.md
docs/tdd/collab/: CRDT-Model.md  Conflict-Resolution.md  Presence-Protocol.md
docs/tdd/compat/: Compatibility-Matrix.md  Coverage-Checklist.md
docs/tdd/deployment/: Build-Matrix.md
docs/tdd/diff/: Document-Diff.md
docs/tdd/editor/: Clipboard-Import.md  Command-Catalog.md  Command-System.md  Find-Replace.md  Selection-Model-Detailed.md  Spellcheck.md  Styles-Cascade.md
docs/tdd/extensions/: Plugin-Architecture.md
docs/tdd/fields/: Field-Update-Rules.md
docs/tdd/fonts/: Font-Substitution-Matrix.md
docs/tdd/formats/: RTF-ODT-Mapping.md
docs/testing/: 01-basic-editing.md  02-text-formatting.md  03-paragraphs-styles.md  04-lists.md  05-tables.md  06-images-shapes.md  07-document-structure.md  08-fields-references.md  09-track-changes-comments.md  10-import-export.md  11-collaboration.md  12-advanced-features.md  13-performance.md  14-accessibility.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: collab_commands.rs  commands.rs  mail_merge_commands.rs  main.rs  revision_commands.rs  state.rs  template_commands.rs  view_mode_commands.rs
(+189 files in other folders)
