[package]
name = "edit_engine"
version.workspace = true
edition.workspace = true
description = "Command system, selection model, and undo/redo"

[dependencies]
doc_model.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
