[package]
name = "mail_merge"
version = "0.1.0"
edition = "2021"
description = "Mail merge data sources and field mapping for the MS Word clone"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
calamine = "0.24"

[dev-dependencies]
tempfile = "3.10"
