[package]
name = "math"
version.workspace = true
edition.workspace = true
description = "Math equation model, OMML parsing, layout, and rendering"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
quick-xml = "0.37"

[dev-dependencies]
proptest.workspace = true
