[package]
name = "perf"
version.workspace = true
edition.workspace = true
description = "Performance telemetry and profiling utilities"

[features]
default = ["telemetry"]
# Enable performance telemetry collection
telemetry = []
# Enable detailed profiling (more overhead)
profiling = ["telemetry"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
