[package]
name = "revisions"
version.workspace = true
edition.workspace = true
description = "Track Changes (revision tracking) system for document editing"

[dependencies]
doc_model.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
