[package]
name = "store"
version.workspace = true
edition.workspace = true
description = "Persistence, autosave, and file I/O"

[dependencies]
doc_model.workspace = true
render_model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
base64 = "0.22"
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
flate2 = "1.0"

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
