[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
description = "Analytics and diagnostics telemetry system"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { version = "1.0", features = ["sync", "rt", "time"] }
regex-lite = "0.1"

[dev-dependencies]
proptest.workspace = true
tokio = { version = "1.0", features = ["full", "test-util"] }
